--- a/packages/web_services/rest/page_templates/page_rest_resource_js/locale/en/lang_screen_details.xml
+++ b/packages/web_services/rest/page_templates/page_rest_resource_js/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.5 2012/08/31 03:48:28 ewang Exp $
+* $Id: lang_screen_details.xml,v 1.5.4.1 2013/02/18 05:52:11 ewang Exp $
 *
 */
 -->
@@ -47,6 +47,10 @@
 			For example "print(_REST.response.body);" will print the body of the first response.
 			Note, if you are using E4X to process an XML document, you will likely need to use "_REST.response.bodyx" to avoid the XML declaration choking the parser.
 		</note>
+		<field attribute="preprocess_keywords">
+			<display_name>Pre-Process Matrix Global Keywords</display_name>
+			<note>Pre-processing Matrix global keywords allows %globals_*% keywords to be evaluated prior to running JavaScript.</note>
+		</field>
 		<field attribute="js_engine">
 			<display_name>JS Engine</display_name>
 			<note>SpideMokey requires engine binary path specified in External Tools Configuration.V8 engine requires v8js PECL extension to be installed.</note>
