--- a/core/locale/en/lang_strings.xml
+++ b/core/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.422.2.2 2013/03/15 03:01:00 ewang Exp $
+* $Id: lang_strings.xml,v 1.422.2.3 2013/04/02 23:38:34 ewang Exp $
 *
 */
 
@@ -2817,9 +2817,13 @@ If you click &quot;OK&quot;, this context - and the attribute and metadata value
 	<!-- http_request and oauth attribute strings -->
 	<string source="http_request_urls">URL(s)</string>
 	<string source="http_request_method">Method</string>
+	<string source="http_request_enable_http_10">Use HTTP 1.0</string>
 	<string source="http_request_timeout">Timeout (seconds)</string>
 	<string source="http_request_follow_redirect">Follow Redirects</string>
 	<string source="http_request_disable_ssl_verify">Disable SSL certificate verification</string>
+	<string source="http_request_ssl_cert">SSL certificate filepath</string>
+	<string source="http_request_ssl_key">SSL key filepath</string>
+	<string source="http_request_ca_file">SSL CA filepath</string>
 	<string source="http_request_cache_options">Cache Options</string>
 	<string source="http_request_cache_post_requests">Cache Post Requests (use with caution)</string>
 	<string source="http_request_default_cache_expiry">Default Cache Expiry (seconds)</string>
